cfn_benchmark/cfn_templates/fugue__regula/rego__tests__rules__cfn__vpc__inputs__ingress_3389_infra.yaml
# Copyright 2020-2021 Fugue, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
Resources:
  Vpc01:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'

  ValidSecurityGroup02:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc01
      GroupDescription: Description
      SecurityGroupIngress:
      - CidrIp: '0.0.0.0/0'
        FromPort: 80
        ToPort: 80
        IpProtocol: -1

  InvalidSecurityGroup01:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc01
      GroupDescription: Description
      SecurityGroupIngress:
      - CidrIp: '0.0.0.0/0'
        FromPort: 3389
        ToPort: 3389
        IpProtocol: -1
